# career-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BRAND_VOICE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENGINEERING_PRINCIPLES.md  GITHUB_PAGES_SETUP.md  POSITIONING.md  README.md  SECURITY.md  SMOKE_TEST_REPORT.md  demo-form.html  index.html  package.json  plugin.json  profile.example.json  pyproject.toml  requirements.txt  save_server.py
.agents/plugins/: marketplace.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.githooks/: pre-commit  pre-push
.github/: CI_CD_IMPLEMENTATION_SUMMARY.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-review.yml  pages.yml  publish.yml  release-please.yml  security.yml
docs/: README.md  apply-codex-chrome-verification.md  index.html  local-worktree-branch-cleanup.md  review-routing.md  source-methodology.md  validation-policy.md
docs/evidence/issue-72/: README.md
plugins/career-agent/: AGENTS.md  LICENSE  README.md  profile.example.json
plugins/career-agent/.codex-plugin/: plugin.json
plugins/career-agent/docs/: apply-codex-chrome-verification.md
plugins/career-agent/skills/apply/: SKILL.md
plugins/career-agent/skills/generate-cv/: SKILL.md
plugins/career-agent/skills/new-role/: SKILL.md
plugins/career-agent/skills/source/: SKILL.md
plugins/career-agent/src/: ats_confirmation_patterns.json  audit.py  cl_builder.py  cv_builder.py  generate_application.py  pre_apply_checks.py  quality_gates.py  record_submission.py  tracker.py  validation.py  yolo.py
roles.example/: example_role.json
scripts/: check-codeowners.js  check-docs-consistency.js  check-package.js  sync-codex-marketplace.js
skills/apply/: SKILL.md
skills/generate-cv/: SKILL.md
skills/new-role/: SKILL.md
skills/setup-profile/: SKILL.md
skills/source/: SKILL.md
skills/track/: SKILL.md
src/: ats_confirmation_patterns.json  cl_builder.py  cv_builder.py  generate_application.py  jobqa_workspace.py  pre_apply_checks.py  quality_gates.py  tracker.py  validation.py  yolo.py
tests/: __init__.py  integration_test.sh  smoke_test.py  test_jobqa_workspace.py  test_pre_apply_checks.py  test_yolo.py
tests/fixtures/non_pii/: profile.synthetic.json
tests/fixtures/non_pii/roles/: synthetic_quality_gate_fail.json  synthetic_quality_gate_pass.json  synthetic_quality_gate_warn.json
