[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "career-agent"
version = "1.2.2"
description = "Agentic job application workflow for tailored CVs, cover letters, sourcing, ATS form handoff, and application tracking."
authors = [{name = "nextwebb"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://nextwebb.github.io/career-agent"
Repository = "https://github.com/nextwebb/career-agent"
Issues = "https://github.com/nextwebb/career-agent/issues"

# ──────────────────────────────────────────────────────────────────────────────
# Ruff Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".claude",
    "plugins/career-agent/src",
]

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), pep8-naming (N)
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "B904",   # Within an except clause, raise exceptions with raise ... from err
    "SIM105", # Use contextlib.suppress instead of try-except-pass
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow print statements in CLI scripts
"src/generate_application.py" = ["T201", "E402"]  # E402: imports after sys.path manipulation
"src/tracker.py" = ["T201"]
# Allow HTTP handler naming conventions and style variable naming
"save_server.py" = ["N802"]  # do_GET, do_POST are HTTP handler conventions
"src/cv_builder.py" = ["N806", "C408"]  # Style constants intentionally uppercase
"src/cl_builder.py" = ["N806", "C408"]  # Style constants intentionally uppercase
"tests/smoke_test.py" = ["F401"]  # Imports tested for availability

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ──────────────────────────────────────────────────────────────────────────────
# mypy Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypdf.*"
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────────────────
# Bandit Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = [
    "tests/",
    ".venv/",
    "venv/",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
]

# ──────────────────────────────────────────────────────────────────────────────
# pytest Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
